tests/ignore_package/ignore_package.exp
Error -------------------------------------------------------------- foo.js:8:17

Cannot resolve module `underscore`.

Error: foo.js:8
  8: var _ = require('underscore');
                     ^^^^^^^^^^^^ Cannot resolve module `underscore`.


Found 1 error
